--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <table> 
             <tr> 
                 <td class="contenedor-centrado">
-                    <a href="altas.html">Alta de productos</a>
+                    <a href="agregar.html">Alta de productos</a>
                 </td> 
             </tr> 
             <tr> 
