--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             </tr> 
             <tr> 
                 <td class="contenedor-centrado ">
-                    <a href="listado.html">Listado de productos</a>
+                    <a href="mostrar.html">Listado de productos</a>
                 </td> 
             </tr> 
             <tr> 
                 <td class="contenedor-centrado ">
-                    <a href="modificaciones.html">Modificar datos de productos</a>
+                    <a href="modificar.html">Modificar datos de productos</a>
                 </td> 
             </tr> 
             <tr> 
