--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <table> 
             <tr> 
                 <td class="contenedor-centrado">
-                    <a href="altas.html">Alta de productos</a>
+                    <a href="agregar.html">Alta de productos</a>
                 </td> 
             </tr> 
             <tr> 
                 <td class="contenedor-centrado ">
-                    <a href="listado.html">Listado de productos</a>
+                    <a href="mostrar.html">Listado de productos</a>
                 </td> 
             </tr> 
             <tr> 
                 <td class="contenedor-centrado ">
-                    <a href="modificaciones.html">Modificar datos de productos</a>
+                    <a href="modificar.html">Modificar datos de productos</a>
                 </td> 
             </tr> 
             <tr> 
