--- a/mostrar.html
+++ b/mostrar.html
@@ -40,5 +40,6 @@
     <div class="contenedor-centrado">
       <a href="index.html">Menu principal</a>
     </div>
+    <script src="listado.js"></script>
   </body>
 </html>
