--- a/listadoEliminar.html
+++ b/listadoEliminar.html
@@ -34,6 +34,6 @@
     <div class="contenedor-centrado"> 
         <a href="index.html">Menu principal</a> 
     </div>
-    
+    <script src="listadoEliminar.js"></script>
 </body>
 </html>
